	* doc/specs/tpi/tpi_fig6.tbl: documentation improvements
	* doc/specs/tpi/tpi_fig7.tbl: documentation improvements
	* doc/specs/tpi/tpi_fig8.tbl: documentation improvements
	* doc/specs/tpi/tpi_fig9.tbl: documentation improvements
	* doc/specs/tpi/tpi_tab8.tbl: documentation improvements
	* doc/specs/tpi/tpi_tabx.tbl: documentation improvements

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strxnet.refs: updated references
	* src/examples/server.c: added file

2008-05-05  Brian Bidulock  <bidulock@openss7.org>

	* src/lib/xnet.c: added proper data transfer flag handling to pass flags
	  from XX25 implementation.
	* doc/manual/news.texi: noted it
	* src/modules/tirdwr.c: be strict with MORE_flag

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* strxnet.lsm.in: updates for release
	* strxnet.spec.in: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/strxnet-core.postinst.in: updates for release
	* debian/strxnet-core.postrm.in: updates for release
	* debian/strxnet-core.preinst.in: updates for release
	* debian/strxnet-core.prerm.in: updates for release
	* debian/strxnet-init.postinst.in: updates for release
	* debian/strxnet-init.preinst.in: updates for release
	* po/de.po: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* doc/manual/prerequisites.texi: added strx25 sub-package

2008-04-28  Brian Bidulock  <bidulock@openss7.org>

	* strxnet.spec.in: updates for release
	* doc/man/strxnet.refs: updates for release

2008-04-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strxnet.refs: updated references